--- a/Ninja/monroe.html
+++ b/Ninja/monroe.html
@@ -91,21 +91,22 @@
     </style>
 </head>
 <body>
-     <!-- Navigation -->
-    <nav>
-        <div class="nav-container">
-            <a href="#" class="logo">PR Pros Toastmasters</a>
-            <div class="nav-links">
-			
-				<a href="index.html">Home</a>
-                <a href="index.html#about">About</a>
-                <a href="index.html#agenda">Agenda</a>
-                <a href="index.html#speeches">Speeches</a>
-                <a href="index.html#register" class="btn btn-nav">Register Now</a>
-				<a href="Speakers.html">Speech Outlines</a>
-				<a href="monroe.html">Monroe Motivated Sequence</a>
-			</div>
-    </nav>
+    <!-- Navigation -->
+<nav>
+    <div class="nav-container">
+        <!-- It's also good practice to make the logo link back to the main portal -->
+        <a href="../index.html" class="logo">PR Pros Toastmasters</a>
+        <div class="nav-links">
+            <a href="../index.html">Home</a> <!-- CHANGED THIS LINE -->
+            <a href="index.html#about">About</a>
+            <a href="index.html#agenda">Agenda</a>
+            <a href="index.html#speeches">Speeches</a>
+            <a href="index.html#register" class="btn btn-nav">Register Now</a>
+            <a href="Speakers.html">Speech Outlines</a>
+            <a href="monroe.html">Monroe Motivated Sequence</a>
+        </div>
+    </div>
+</nav>
 	
 
     <!-- Hero Section -->
