--- a/Ninja/speakers.html
+++ b/Ninja/speakers.html
@@ -107,19 +107,21 @@
 </head>
 <body>
      <!-- Navigation -->
-    <nav>
-        <div class="nav-container">
-            <a href="#" class="logo">PR Pros Toastmasters</a>
-            <div class="nav-links">
-			
-				<a href="index.html">Home</a>
-                <a href="index.html#about">About</a>
-                <a href="index.html#agenda">Agenda</a>
-                <a href="index.html#speeches">Speeches</a>
-                <a href="index.html#register" class="btn btn-nav">Register Now</a>
-				<a href="Speakers.html">Speech Outlines</a>
-				<a href="monroe.html">Monroe Motivated Sequence</a>
-			</div>
+<nav>
+    <div class="nav-container">
+        <!-- It's also good practice to make the logo link back to the main portal -->
+        <a href="../index.html" class="logo">PR Pros Toastmasters</a>
+        <div class="nav-links">
+            <a href="../index.html">Home</a> <!-- CHANGED THIS LINE -->
+            <a href="index.html#about">About</a>
+            <a href="index.html#agenda">Agenda</a>
+            <a href="index.html#speeches">Speeches</a>
+            <a href="index.html#register" class="btn btn-nav">Register Now</a>
+            <a href="Speakers.html">Speech Outlines</a>
+            <a href="monroe.html">Monroe Motivated Sequence</a>
+        </div>
+    </div>
+</nav>
     </nav>
     <!-- Hero Section -->
     <section class="hero" style="background-image: linear-gradient(rgba(0, 65, 101, 0.7), rgba(0, 65, 101, 0.7)), url('https://images.unsplash.com/photo-1508700115892-45ecd05ae2ad?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1469&q=80'); min-height: 60vh;">
