--- a/ceo/index.html
+++ b/ceo/index.html
@@ -11,19 +11,21 @@
 <body>
    	
 	 <!-- Navigation Bar -->
-    <nav>
-        <div class="nav-container container">
-            <a href="index.html" class="logo">PR Pros Toastmasters</a>
-            <div class="nav-links">
-                <a href="index.html">Home</a>
-                <a href="agenda.html">Agenda & Activities</a>
-                <a href="speakers.html">Speaker Outlines</a>
-                <a href="aida.html">AIDA Model</a> 
-                <a href="resources.html">Resources & Tools</a>
-                <a href="index.html#register" class="btn btn-nav">Enroll Now</a>
-            </div>
+<nav>
+    <div class="nav-container container">
+        <!-- Changed logo href to point to the main workshops index page -->
+        <a href="../index.html" class="logo">PR Pros Toastmasters</a> 
+        <div class="nav-links">
+            <!-- Changed Home href to point to the main workshops index page -->
+            <a href="../index.html">Home</a> 
+            <a href="agenda.html">Agenda & Activities</a>
+            <a href="speakers.html">Speaker Outlines</a>
+            <a href="aida.html">AIDA Model</a> 
+            <a href="resources.html">Resources & Tools</a>
+            <a href="index.html#register" class="btn btn-nav">Enroll Now</a>
         </div>
-    </nav>
+    </div>
+</nav>
 
     <!-- Hero Section -->
     <section class="hero hero-home"> <!-- Added hero-home class -->
@@ -295,4 +297,5 @@
     </script>
 </body>
 </html>
+
 
