--- a/ceo/agenda.html
+++ b/ceo/agenda.html
@@ -10,20 +10,22 @@
 </head>
 <body>
    	
-	 <!-- Navigation Bar -->
-    <nav>
-        <div class="nav-container container">
-            <a href="index.html" class="logo">PR Pros Toastmasters</a>
-            <div class="nav-links">
-                <a href="index.html">Home</a>
-                <a href="agenda.html">Agenda & Activities</a>
-                <a href="speakers.html">Speaker Outlines</a>
-                <a href="aida.html">AIDA Model</a> 
-                <a href="resources.html">Resources & Tools</a>
-                <a href="index.html#register" class="btn btn-nav">Enroll Now</a>
-            </div>
+	<!-- Navigation Bar -->
+<nav>
+    <div class="nav-container container">
+        <!-- Changed logo href to point to the main workshops index page -->
+        <a href="../index.html" class="logo">PR Pros Toastmasters</a> 
+        <div class="nav-links">
+            <!-- Changed Home href to point to the main workshops index page -->
+            <a href="../index.html">Home</a> 
+            <a href="agenda.html">Agenda & Activities</a>
+            <a href="speakers.html">Speaker Outlines</a>
+            <a href="aida.html">AIDA Model</a> 
+            <a href="resources.html">Resources & Tools</a>
+            <a href="index.html#register" class="btn btn-nav">Enroll Now</a>
         </div>
-    </nav>
+    </div>
+</nav>
 
     <!-- Hero Section for Agenda Page -->
     <section class="hero hero-agenda"> <!-- Added hero-agenda class -->
@@ -208,3 +210,4 @@
     </script>
 </body>
 </html>
+
