--- a/ceo/resources.html
+++ b/ceo/resources.html
@@ -10,21 +10,22 @@
 </head>
 <body>
    	
-	 <!-- Navigation Bar -->
-    <nav>
-        <div class="nav-container container">
-            <a href="index.html" class="logo">PR Pros Toastmasters</a>
-            <div class="nav-links">
-                <a href="index.html">Home</a>
-                <a href="agenda.html">Agenda & Activities</a>
-                <a href="speakers.html">Speaker Outlines</a>
-                <a href="aida.html">AIDA Model</a> 
-                <a href="resources.html">Resources & Tools</a> <!-- New link -->
-                <a href="index.html#register" class="btn btn-nav">Enroll Now</a>
-            </div>
+	<!-- Navigation Bar -->
+<nav>
+    <div class="nav-container container">
+        <!-- Changed logo href to point to the main workshops index page -->
+        <a href="../index.html" class="logo">PR Pros Toastmasters</a> 
+        <div class="nav-links">
+            <!-- Changed Home href to point to the main workshops index page -->
+            <a href="../index.html">Home</a> 
+            <a href="agenda.html">Agenda & Activities</a>
+            <a href="speakers.html">Speaker Outlines</a>
+            <a href="aida.html">AIDA Model</a> 
+            <a href="resources.html">Resources & Tools</a>
+            <a href="index.html#register" class="btn btn-nav">Enroll Now</a>
         </div>
-    </nav>
-
+    </div>
+</nav>
     <!-- Hero Section for Resources Page -->
     <section class="hero hero-resources"> <!-- Added hero-resources class -->
         <div class="hero-content">
@@ -142,3 +143,4 @@
     </footer>
 </body>
 </html>
+
