--- a/damagecontrol/speakers.html
+++ b/damagecontrol/speakers.html
@@ -10,19 +10,21 @@
 </head>
 <body>
     <!-- Navigation -->
-    <nav>
-        <div class="nav-container">
-            <a href="index.html" class="logo">PR Pros Toastmasters</a>
-            <div class="nav-links">
-                <a href="index.html">Home</a>
-                <a href="agenda.html">Agenda</a>
-                <a href="speakers.html">Speakers</a>
-                <a href="toulmins_model.html">Toulmin's Model</a>
-                <a href="resources.html">Resources</a>
-                <a href="#registration-form" class="btn btn-nav">Register Now</a>
-            </div>
+<nav>
+    <div class="nav-container">
+        <!-- Changed logo href to point to the main workshops index page -->
+        <a href="../index.html" class="logo">PR Pros Toastmasters</a>
+        <div class="nav-links">
+            <!-- Changed Home href to point to the main workshops index page -->
+            <a href="../index.html">Home</a>
+            <a href="agenda.html">Agenda</a>
+            <a href="speakers.html">Speakers</a>
+            <a href="toulmins_model.html">Toulmin's Model</a>
+            <a href="resources.html">Resources</a>
+            <a href="#registration-form" class="btn btn-nav">Register Now</a>
         </div>
-    </nav>
+    </div>
+</nav>
 
     <!-- Hero Section -->
     <section class="hero hero-speakers">
@@ -401,3 +403,4 @@
     </script>
 </body>
 </html>
+
