--- a/damagecontrol/toulmins_model.html
+++ b/damagecontrol/toulmins_model.html
@@ -9,20 +9,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Navigation -->
-    <nav>
-        <div class="nav-container">
-            <a href="index.html" class="logo">PR Pros Toastmasters</a>
-            <div class="nav-links">
-                <a href="index.html">Home</a>
-                <a href="agenda.html">Agenda</a>
-                <a href="speakers.html">Speakers</a>
-                <a href="toulmins_model.html">Toulmin's Model</a>
-                <a href="resources.html">Resources</a>
-                <a href="#registration-form" class="btn btn-nav">Register Now</a>
-            </div>
+   <!-- Navigation -->
+<nav>
+    <div class="nav-container">
+        <!-- Changed logo href to point to the main workshops index page -->
+        <a href="../index.html" class="logo">PR Pros Toastmasters</a>
+        <div class="nav-links">
+            <!-- Changed Home href to point to the main workshops index page -->
+            <a href="../index.html">Home</a>
+            <a href="agenda.html">Agenda</a>
+            <a href="speakers.html">Speakers</a>
+            <a href="toulmins_model.html">Toulmin's Model</a>
+            <a href="resources.html">Resources</a>
+            <a href="#registration-form" class="btn btn-nav">Register Now</a>
         </div>
-    </nav>
+    </div>
+</nav>
 
     <!-- Hero Section -->
     <section class="hero hero-toulmins">
@@ -189,3 +191,4 @@
     </footer>
 </body>
 </html>
+
