--- a/viralfame/index.html
+++ b/viralfame/index.html
@@ -923,18 +923,20 @@
 </head>
 <body>
     <!-- Navigation -->
-    <nav>
-        <div class="nav-container">
-            <a href="index.html" class="logo">PR Pros Toastmasters</a>
-            <div class="nav-links">
-                <a href="index.html">Home</a>
-                <a href="timeline.html">Agenda Timeline</a>
-                <a href="speakers.html">Speaker Guides</a>
-                <a href="rhetoric.html">Rhetorical Triangle</a>
-                <a href="#registration-form" class="btn btn-nav">Register Now</a>
-            </div>
+<nav>
+    <div class="nav-container">
+        <!-- Changed logo href to point to the main workshops index page -->
+        <a href="../index.html" class="logo">PR Pros Toastmasters</a>
+        <div class="nav-links">
+            <!-- Changed Home href to point to the main workshops index page -->
+            <a href="../index.html">Home</a>
+            <a href="timeline.html">Agenda Timeline</a>
+            <a href="speakers.html">Speaker Guides</a>
+            <a href="rhetoric.html">Rhetorical Triangle</a>
+            <a href="#registration-form" class="btn btn-nav">Register Now</a>
         </div>
-    </nav>
+    </div>
+</nav>
 	
     <!-- Hero Section -->
     <section class="hero">
