--- a/viralfame/rhetoric.html
+++ b/viralfame/rhetoric.html
@@ -9,19 +9,21 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-     <!-- Navigation -->
-    <nav>
-        <div class="nav-container">
-            <a href="index.html" class="logo">PR Pros Toastmasters</a>
-            <div class="nav-links">
-                <a href="index.html">Home</a>
-                <a href="timeline.html">Agenda Timeline</a>
-                <a href="speakers.html">Speaker Guides</a>
-                <a href="rhetoric.html">Rhetorical Triangle</a>
-                <a href="#registration-form" class="btn btn-nav">Register Now</a>
-            </div>
+    <!-- Navigation -->
+<nav>
+    <div class="nav-container">
+        <!-- Changed logo href to point to the main workshops index page -->
+        <a href="../index.html" class="logo">PR Pros Toastmasters</a>
+        <div class="nav-links">
+            <!-- Changed Home href to point to the main workshops index page -->
+            <a href="../index.html">Home</a>
+            <a href="timeline.html">Agenda Timeline</a>
+            <a href="speakers.html">Speaker Guides</a>
+            <a href="rhetoric.html">Rhetorical Triangle</a>
+            <a href="#registration-form" class="btn btn-nav">Register Now</a>
         </div>
-    </nav>
+    </div>
+</nav>
 	
 
     <!-- Rhetorical Triangle Section -->
@@ -198,6 +200,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
