--- a/index.html
+++ b/index.html
@@ -79,6 +79,29 @@
             background-color: rgba(242, 223, 116, 0.2);
         }
 
+        /* New nav links specific for the main page */
+        .main-nav-links {
+            display: flex;
+            gap: 1.5rem; /* Space between links */
+            align-items: center;
+            flex-wrap: wrap; /* Allow wrapping on smaller screens */
+            justify-content: flex-end; /* Align to the right */
+        }
+
+        .main-nav-links a {
+            color: white;
+            font-weight: 600;
+            transition: color 0.3s;
+            padding: 5px 10px; /* Add some padding for better click area */
+            border-radius: 5px;
+        }
+
+        .main-nav-links a:hover {
+            color: var(--yellow);
+            background-color: rgba(255, 255, 255, 0.1); /* Subtle hover effect */
+        }
+
+
         /* Hero Section */
         .hero {
             background: linear-gradient(rgba(0, 65, 101, 0.9), rgba(0, 65, 101, 0.9)), 
@@ -273,6 +296,18 @@
             .nav-container {
                 flex-direction: column;
                 gap: 1rem;
+                align-items: flex-start; /* Align logo/links to start on small screens */
+            }
+
+            .main-nav-links {
+                width: 100%; /* Take full width */
+                justify-content: center; /* Center links on small screens */
+                margin-top: 10px; /* Add some space below logo */
+            }
+
+            .main-nav-links a {
+                padding: 8px 12px; /* Adjust padding for smaller screens */
+                font-size: 0.9rem;
             }
 
             .workshop-grid {
@@ -303,6 +338,12 @@
     <nav>
         <div class="nav-container">
             <a href="index.html" class="logo">PR Pros Toastmasters</a>
+            <div class="main-nav-links">
+                <a href="ninja/index.html">Storytelling Ninja</a>
+                <a href="ceo/index.html">CEO Whisperer</a>
+                <a href="viralfame/index.html">Viral Fame Lab</a>
+                <a href="damagecontrol/index.html">Damage Control</a>
+            </div>
         </div>
     </nav>
 
